# FullStack-StockVision

./: .gitignore  LICENSE  README.md
.dvc/: config
cpp_server/: CMakeLists.txt  README.md
cpp_server/include/: config.h  csv_loader.h  data_repository.h  feature_engineer.h  http_server.h  json_writer.h  logger.h  predictor.h
cpp_server/src/: config.cpp  csv_loader.cpp  data_repository.cpp  feature_engineer.cpp  http_server.cpp  main.cpp  predictor.cpp
cpp_server/tests/: test_csv_loader.cpp  test_features.cpp
feature_store/: README.md  feature_client.py  materialize.py
feature_store/feature_repo/: feature_store.yaml  features.py
frontend/: .env.example  README.md  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.jsx  index.css  index.js
frontend/src/components/: ErrorBanner.jsx  ExplainChart.jsx  Header.jsx  PredictionPanel.jsx  PriceChart.jsx  TabSwitcher.jsx  TickerForm.jsx
frontend/src/hooks/: useExplanation.js  useModels.js  usePrediction.js
frontend/src/services/: api.js
frontend/src/utils/: format.js
ingest_train/: README.md  artifacts.dvc  data.dvc  explainer.py  mlflow_wrapper.py  pyproject.toml  requirements.txt  sweep_agent.py  sweep_config.yaml
ingest_train/stockvision/: __init__.py  api.py  classical_trainer.py  cli.py  config.py  data.py  dataset.py  evaluation.py  features.py  inference.py  logging_setup.py  trainer.py  triton.py
ingest_train/stockvision/models/: __init__.py  base.py  bilstm.py  cnn_lstm.py  gru.py  linear.py  lstm.py  prophet_model.py  registry.py  statsforecast_model.py  tcn.py  transformer.py
ingest_train/tests/: test_dataset.py  test_evaluation.py  test_features.py  test_registry.py
load_tests/: README.md  compare_report.py  locustfile.py
testing models/: Stock_Prediction.ipynb  Stock_Prediction_Diff_Parameters.ipynb
triton_deploy/: README.md  docker-compose.triton.yml  setup_triton_repo.py  triton_client.py
