[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stockvision"
version = "0.2.0"
description = "Time-series forecasting models and data services for the StockVision platform."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "StockVision Contributors" }]
keywords = ["stocks", "time-series", "forecasting", "lstm", "transformer", "onnx"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "yfinance>=0.2.40",
    "tensorflow>=2.13,<2.17",
    "tf2onnx>=1.16",
    "onnxruntime>=1.17",
    "joblib>=1.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
stockvision = "stockvision.cli:main"

[tool.setuptools.packages.find]
include = ["stockvision*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
